force-app/main/default/objects/Prospect__c/Prospect__c.object-meta.xml
<CustomObject>
    <description>Represents a potential customer or lead who has shown interest but is not yet qualified as a Contact or Account.</description>
    <label>Prospect</label>
    <nameField>
        <label>Prospect Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Prospects</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>