force-app/main/default/objects/Prospect__c/fields/Address__c.field-meta.xml
<CustomField>
    <fullName>Address__c</fullName>
    <description>The ‘Address’ field in the Enquiry object records location details related to the enquiry, aiding in geographic filtering and reporting.</description>
    <label>Address</label>
    <type>Address</type>
</CustomField>