force-app/main/default/objects/Prospect__c/fields/Date_of_Prospect__c.field-meta.xml
<CustomField>
    <fullName>Date_of_Prospect__c</fullName>
    <description>This use to see prospect date</description>
    <label>Date of Prospect</label>
    <type>Date</type>
</CustomField>