force-app/main/default/objects/Prospect__c/fields/Email__c.field-meta.xml
<CustomField>
    <fullName>Email__c</fullName>
    <description>Email address related to the Enquiry</description>
    <label>Email</label>
    <type>Email</type>
</CustomField>