force-app/main/default/objects/Prospect__c/fields/Estimation_Ref_Number__c.field-meta.xml
<CustomField>
    <fullName>Estimation_Ref_Number__c</fullName>
    <description>This field store Estimation Ref Number value</description>
    <label>Estimation Ref Number</label>
    <length>50</length>
    <type>Text</type>
</CustomField>