force-app/main/default/objects/Prospect__c/fields/Expected_Amount__c.field-meta.xml
<CustomField>
    <fullName>Expected_Amount__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Expected Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>