force-app/main/default/objects/Prospect__c/fields/Notes__c.field-meta.xml
<CustomField>
    <fullName>Notes__c</fullName>
    <description>This field use fill the description details</description>
    <label>Notes</label>
    <type>TextArea</type>
</CustomField>