force-app/main/default/objects/Prospect__c/fields/Offer_Value__c.field-meta.xml
<CustomField>
    <fullName>Offer_Value__c</fullName>
    <description>This field store offer value details</description>
    <label>Offer Value</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>