force-app/main/default/objects/Prospect__c/fields/Project_Reference__c.field-meta.xml
<CustomField>
    <fullName>Project_Reference__c</fullName>
    <label>Project Reference</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>