force-app/main/default/objects/Prospect__c/fields/Prospect_Reference_Number1__c.field-meta.xml
<CustomField>
    <fullName>Prospect_Reference_Number1__c</fullName>
    <description>This use to store ref number</description>
    <label>Prospect Reference Number</label>
    <length>50</length>
    <type>Text</type>
</CustomField>