force-app/main/default/objects/Prospect__c/fields/Prospect_Reference_Number__c.field-meta.xml
<CustomField>
    <fullName>Prospect_Reference_Number__c</fullName>
    <description>This field store Prospect Reference Number.</description>
    <displayFormat>CB/PRN/{YY}/{0000}</displayFormat>
    <label>Prospect Reference Number</label>
    <type>AutoNumber</type>
</CustomField>