force-app/main/default/objects/Prospect__c/fields/Prospect_Type__c.field-meta.xml
<CustomField>
    <fullName>Prospect_Type__c</fullName>
    <description>This field store product or service or Prospect details</description>
    <label>Prospect Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Product</fullName>
            </value>
            <value>
                <fullName>Service</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>