force-app/main/default/objects/Prospect__c/fields/Quotation_Date_Sent__c.field-meta.xml
<CustomField>
    <fullName>Quotation_Date_Sent__c</fullName>
    <description>This field store quotation date</description>
    <label>Quotation Date Sent</label>
    <type>Date</type>
</CustomField>