force-app/main/default/objects/Prospect__c/fields/Responsible_staffs__c.field-meta.xml
<CustomField>
    <fullName>Responsible_staffs__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>this Field use to lookup user</description>
    <label>Responsible staff</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Enquiries</relationshipName>
    <type>Lookup</type>
</CustomField>