force-app/main/default/objects/Prospect__c/fields/Serial_Number__c.field-meta.xml
<CustomField>
    <fullName>Serial_Number__c</fullName>
    <displayFormat>PROS-{000}</displayFormat>
    <label>Sl.No</label>
    <type>AutoNumber</type>
</CustomField>